--- a/settings.gradle
+++ b/settings.gradle
@@ -96,4 +96,5 @@ include 'cordapp-configuration-publish'
 include 'crypto'
 include 'data:avro-schema'
 include 'data:topic-schema'
+include 'persistence'
 include 'serialization'
