--- a/persistence/build.gradle
+++ b/persistence/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'com.r3.internal.gradle.plugins.r3Publish'
+    id 'org.jetbrains.kotlin.jvm'
     id "biz.aQute.bnd.builder"
 }
 
@@ -16,11 +17,7 @@ dependencies {
         exclude group: 'org.osgi'
     }
 
-    // COMMON
     implementation project(":base")
-    implementation project(":application")
-    implementation project(":application-dependency-injection-internal")
-    implementation project(":common:logging")
 }
 tasks.named('jar', Jar) {
     archiveBaseName = 'corda-persistence'
