--- a/gradle.properties
+++ b/gradle.properties
@@ -11,6 +11,7 @@ cordaApiRevision = 3
 
 # Main
 kotlinVersion = 1.4.21
+kotlin.stdlib.default.dependency = false
 
 # License
 ## TODO: Change to correct name and URL
