--- a/data/avro-schema/build.gradle
+++ b/data/avro-schema/build.gradle
@@ -13,6 +13,7 @@ dependencies {
     api "org.apache.avro:avro:$avroVersion"
     implementation platform(project(':corda-api'))
     implementation project(":base")
+    implementation "net.corda.kotlin:kotlin-stdlib-jdk8-osgi:$kotlinVersion"
 
     compileOnly "org.osgi:osgi.annotation:$osgiVersion"
     compileOnly "org.osgi:osgi.core:$osgiVersion"
