--- a/data/topic-schema/build.gradle
+++ b/data/topic-schema/build.gradle
@@ -6,6 +6,6 @@ plugins {
 description 'Definition of Topics'
 
 dependencies {
-    implementation "net.corda.kotlin:kotlin-stdlib-jdk8-osgi:$kotlinVersion"
+    implementation 'net.corda.kotlin:kotlin-stdlib-jdk8-osgi'
     implementation platform(project(':corda-api'))
 }
