--- a/application/build.gradle
+++ b/application/build.gradle
@@ -7,8 +7,7 @@ plugins {
 description 'Corda Application'
 
 dependencies {
-    api "org.jetbrains.kotlin:kotlin-osgi-bundle:$kotlinVersion"
-    api "net.corda.kotlin:kotlin-stdlib-jdk8-osgi:$kotlinVersion"
+    api 'net.corda.kotlin:kotlin-stdlib-jdk8-osgi'
 
     api platform(project(':corda-api'))
     api project(":base")
@@ -19,8 +18,8 @@ dependencies {
     implementation "org.bouncycastle:bcprov-jdk15on:$bouncycastleVersion"
     implementation "org.bouncycastle:bcpkix-jdk15on:$bouncycastleVersion"
 
-    compileOnly "org.osgi:osgi.core:$osgiVersion"
-    compileOnly "org.osgi:osgi.annotation:$osgiVersion"
+    compileOnly 'org.osgi:osgi.core'
+    compileOnly 'org.osgi:osgi.annotation'
 
     testImplementation "org.assertj:assertj-core:$assertjVersion"
 }
