CORE-2360: Add OSGi component annotations to corda-api platform.

--- a/corda-api/build.gradle
+++ b/corda-api/build.gradle
@@ -20,6 +20,7 @@ dependencies {
         api "net.corda.kotlin:kotlin-stdlib-jdk7-osgi:$kotlinVersion"
         api "org.osgi:osgi.annotation:$osgiVersion"
         api "org.osgi:osgi.core:$osgiVersion"
+        api "org.osgi:org.osgi.service.component.annotations:$osgiScrAnnotationVersion"
         api "org.slf4j:slf4j-api:$slf4jVersion"
     }
 }
