--- a/gradle.properties
+++ b/gradle.properties
@@ -8,6 +8,7 @@ cordaProductVersion = 5.0.0
 ## NOTE: currently this is a top level revision, so all API versions will line up, but this could be moved to
 ##   a per module property in which case module versions can change independently.
 cordaApiRevision = 6
+cordaGradlePluginsVersion=6.0.0-DevPreview-RC03
 
 # Main
 kotlinVersion = 1.4.21
