--- a/gradle.properties
+++ b/gradle.properties
@@ -24,8 +24,8 @@ artifactoryContextUrl = https://software.r3.com/artifactory
 # Gradle
 # dokka need more metaspace - https://github.com/Kotlin/dokka/issues/1405
 org.gradle.jvmargs=-XX:MaxMetaspaceSize=1g
-internalPublishVersion = 0.1.+
-internalApiScannerVersion = 0.1.-alpha-1629725784547
+internalPublishVersion = 0.1.-beta+
+internalApiScannerVersion = 0.1.-beta+
 dokkaVersion = 1.4.+
 
 
