--- a/gradle.properties
+++ b/gradle.properties
@@ -20,8 +20,8 @@ cordaDevPreviewVersion = 5.0.0-DevPreview-RC04
 
 # License
 ## TODO: Change to correct name and URL
-licenseName = 'Corda Pre-Release Software License Agreement'
-licenseUrl = 'https://www.r3.com/wp-content/uploads/2020/07/Corda-Pre-Release-Software-License-Agreement.pdf'
+licenseName = Corda Pre-Release Software License Agreement
+licenseUrl = https://www.r3.com/wp-content/uploads/2020/07/Corda-Pre-Release-Software-License-Agreement.pdf
 
 # Artifactory
 artifactoryContextUrl = https://software.r3.com/artifactory
