--- a/packaging/test/workflow-cpk/build.gradle
+++ b/packaging/test/workflow-cpk/build.gradle
@@ -9,11 +9,11 @@ configurations {
 }
 
 dependencies {
-    cordaProvided project(":application")
+    cordaProvided project(':application')
+    cordaProvided project(':ledger')
+    cordaProvided project(':crypto')
     // TODO:  using corda5 dev preview to build a cpk for the packaging unit tests, these libs aren't in corda-api yet
-    cordaProvided("net.corda:corda-ledger:$cordaDevPreviewVersion")
-    cordaProvided("net.corda:corda-crypto-api:$cordaDevPreviewVersion")
-    cordapp("net.corda:corda-flows:$cordaDevPreviewVersion")
+    cordapp "net.corda:corda-flows:$cordaDevPreviewVersion"
 
     cordapp project(':packaging:test:contract-cpk')
 
