CORE-2103: Upgrade to Hibernate 5.5.7.Final.

--- a/cordapp-configuration/src/main/resources/net/corda/cordapp/cordapp-configuration.properties
+++ b/cordapp-configuration/src/main/resources/net/corda/cordapp/cordapp-configuration.properties
@@ -15,8 +15,7 @@ Minimum-Corda-Plugins-Version=6.0.0
 # CorDapps must always import these packages so that Corda can
 # still create lazy JPA proxies within the OSGi framework.
 Required-Packages=org.hibernate.annotations,\
-    org.hibernate.proxy,\
-    javassist.util.proxy
+    org.hibernate.proxy
 
 # The OSGi "consumer policy" for Corda's API packages.
 Import-Policy-Packages=net.corda.v5.*
