--- a/data/topic-schema/build.gradle
+++ b/data/topic-schema/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'org.jetbrains.kotlin.jvm'
     id 'com.r3.internal.gradle.plugins.r3Publish'
+    id 'java-library'
 }
 
 description 'Definition of Topics'
