--- a/application/build.gradle
+++ b/application/build.gradle
@@ -11,6 +11,7 @@ dependencies {
 
     api platform(project(':corda-api'))
     api project(":base")
+    api project(":membership")
     api project(":serialization")
 
     implementation project(":crypto")
