--- a/settings.gradle
+++ b/settings.gradle
@@ -98,6 +98,7 @@ include 'crypto'
 include 'data:avro-schema'
 include 'data:topic-schema'
 include 'ledger'
+include 'membership'
 include 'packaging'
 include 'packaging:test:contract-cpk'
 include 'packaging:test:workflow-cpk'
