--- a/settings.gradle
+++ b/settings.gradle
@@ -53,10 +53,10 @@ pluginManagement {
 
 dependencyResolutionManagement {
     repositories {
-        mavenLocal()
+        //mavenLocal()
 
         def cordaUseCache = System.getenv("CORDA_USE_CACHE")
-        if (cordaUseCache != null) {
+        if (false) {
             maven {
                 url = "$artifactoryContextUrl/$cordaUseCache"
                 name = "R3 Maven remote repositories"
