CORE-2739: Upgrade to Bnd 6.0.0.

--- a/buildSrc/src/main/groovy/corda-api.common-library.gradle
+++ b/buildSrc/src/main/groovy/corda-api.common-library.gradle
@@ -29,8 +29,10 @@ dependencies {
 
 tasks.named('jar', Jar) {
     archiveBaseName = "corda-" + project.name
-    bnd """
+    bundle {
+        bnd '''\
 Bundle-Name: \${project.description}
 Bundle-SymbolicName: \${project.group}.\${project.name}
-"""
+'''
+    }
 }
