--- a/crypto/build.gradle
+++ b/crypto/build.gradle
@@ -24,9 +24,11 @@ dependencies {
 }
 
 tasks.named('jar', Jar) {
-    bnd '''\
+    bundle {
+        bnd '''\
 Import-Package:\
     net.i2p.crypto.eddsa.math;resolution:=optional,\
     *
 '''
+    }
 }
