--- a/packaging/test/workflow-cpk/build.gradle
+++ b/packaging/test/workflow-cpk/build.gradle
@@ -9,6 +9,7 @@ configurations {
 }
 
 dependencies {
+    cordaProvided platform(project(':corda-api'))
     cordaProvided project(':application')
     cordaProvided project(':ledger')
     cordaProvided project(':crypto')
