--- a/membership-identity/build.gradle
+++ b/membership-identity/build.gradle
@@ -15,4 +15,6 @@ dependencies {
     api project(':base')
 
     implementation "org.bouncycastle:bcprov-jdk15on:$bouncycastleVersion"
+    // there's a chance that this will cause jenkins failure again
+    implementation project(':data:avro-schema')
 }
